tooltip gap fixed

--- a/src/scripts/OSUIFramework/Pattern/Tooltip/scss/_tooltip.scss
+++ b/src/scripts/OSUIFramework/Pattern/Tooltip/scss/_tooltip.scss
@@ -238,7 +238,7 @@ $osui-tooltip-arrow-size: 9px;
 					border-color: transparent var(--color-neutral-9) transparent transparent;
 					border-width: $osui-tooltip-arrow-size $osui-tooltip-arrow-size $osui-tooltip-arrow-size 0;
 					left: initial;
-					right: 100%;
+					right: calc(100% - 1px);
 					top: 50%;
 					transform: translate(0, -50%);
 				}
@@ -260,7 +260,7 @@ $osui-tooltip-arrow-size: 9px;
 				&:before {
 					border-color: transparent transparent transparent var(--color-neutral-9);
 					border-width: $osui-tooltip-arrow-size 0 $osui-tooltip-arrow-size $osui-tooltip-arrow-size;
-					left: 100%;
+					left: calc(100% - 1px);
 					right: initial;
 				}
 			}
